# Ruchat

./: .gitignore  Cargo.toml  README.md
ruggine-client-web/: Cargo.toml  Trunk.toml  index.html
ruggine-client-web/src/: main.rs
ruggine-core/: Cargo.toml
ruggine-core/src/: error.rs  lib.rs
ruggine-core/src/models/: group.rs  message.rs  mod.rs  user.rs
ruggine-core/src/protocol/: http.rs  mod.rs  ws.rs
ruggine-core/src/utils/: ids.rs  mod.rs  time.rs
ruggine-core/tests/: serialization.rs
ruggine-server/: Cargo.toml
ruggine-server/src/: controllers.rs  lib.rs  main.rs  routes.rs
ruggine-server/tests/: StartAndDatabase.rs
