[package]
name = "ruggine-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["tokio", "http1"] }
# removed explicit hyper dependency
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
reqwest = { version = "0.11", features = ["rustls-tls"] }